Base portal remove Rollbar access token

--- a/config/application.example.yml
+++ b/config/application.example.yml
@@ -10,3 +10,5 @@ AWS_SES_SMTP_ENDPOINT: "email-smtp.us-east-1.amazonaws.com"
 AWS_SES_SMTP_PORT: 587
 AWS_SES_SMTP_USERNAME: ""
 AWS_SES_SMTP_PASSWORD: ""
+
+ROLLBAR_ACCESS_TOKEN: ""
