--- a/config/application.example.yml
+++ b/config/application.example.yml
@@ -5,7 +5,7 @@ ACTIVE_RECORD_ENCRYPTION_PRIMARY_KEY: ""
 ACTIVE_RECORD_ENCRYPTION_DETERMINISTIC_KEY: ""
 ACTIVE_RECORD_ENCRYPTION_KEY_DERIVATION_SALT: ""
 
-BASE_PORTAL_DOMAIN: "snowfoxglobal.org"
+EXCHANGE_BACKEND_DOMAIN: "snowfoxglobal.org"
 AWS_SES_SMTP_ENDPOINT: "email-smtp.us-east-1.amazonaws.com"
 AWS_SES_SMTP_PORT: 587
 AWS_SES_SMTP_USERNAME: ""
