--- a/config/database.yml
+++ b/config/database.yml
@@ -11,14 +11,14 @@ default: &default
 
 development:
   <<: *default
-  database: base_portal_development
+  database: exchange_backend_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: base_portal_test
+  database: exchange_backend_test
 
 # Store production database in the storage/ directory, which by default
 # is mounted as a persistent Docker volume in config/deploy.yml.
