--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -18,6 +18,7 @@ jobs:
       CI: true
       DEVISE_JWT_SECRET_KEY: "dummy_key_for_ci_testing_only_123456789"
       REDIS_URL: redis://localhost:6379/0
+      COVERAGE: true
     services:
       postgres:
         image: postgres:14
@@ -57,3 +58,27 @@ jobs:
           bundle exec rails db:create db:schema:load
       - name: Run tests
         run: bundle exec rspec
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./coverage/lcov.info
+          flags: unittests
+      - name: Archive code coverage results
+        uses: actions/upload-artifact@v4
+        with:
+          name: code-coverage-report
+          path: coverage/
+          retention-days: 7
+      - name: Check coverage threshold
+        run: |
+          if [ ! -f coverage/.last_run.json ]; then
+            echo "No coverage report found!"
+            exit 1
+          fi
+          COVERAGE=$(jq '.result.covered_percent' coverage/.last_run.json)
+          if (( $(echo "$COVERAGE < 90" | bc -l) )); then
+            echo "Code coverage is below 90% (current: $COVERAGE%)"
+            exit 1
+          fi
+          echo "Code coverage is $COVERAGE%"
