--- a/.github/workflows/assets.yml
+++ b/.github/workflows/assets.yml
@@ -14,6 +14,8 @@ jobs:
       RAILS_ENV: production
       NODE_ENV: production
       RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
+      REDIS_URL: redis://localhost:6379/0
+      SECRET_KEY_BASE: ${{ secrets.SECRET_KEY_BASE || '2d9e4a8f6b3c1e7d0a5b8c2f9e6d3a1b4c7e0f9d2a5b8c3f6e9d2a5b8c3f6e9' }}
 
     steps:
       - uses: actions/checkout@v4
