Update RuboCop configuration and enhance ActiveAdmin views for CoinWithdrawals
- Increased the maximum allowed memoized helpers in RuboCop from 10 to 15.
- Added a new rule for nested groups in RSpec with a maximum of 4.
- Updated ActiveAdmin views for CoinWithdrawal and CoinWithdrawalOperation to use `tag_column` and `tag_row` for better display of attributes.

This update improves code quality checks and enhances the presentation of withdrawal data in the admin interface.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -76,7 +76,7 @@ RSpec/AnyInstance:
   Enabled: false
 
 RSpec/MultipleMemoizedHelpers:
-  Max: 10
+  Max: 15
 
 Rails/I18nLocaleTexts:
   Enabled: false
@@ -95,3 +95,6 @@ RSpec/ContextWording:
 
 RSpec/ExampleLength:
   Max: 50
+
+RSpec/NestedGroups:
+  Max: 4
