Change master to main CI CD

--- a/.github/workflows/assets.yml
+++ b/.github/workflows/assets.yml
@@ -2,9 +2,9 @@ name: Asset Precompilation
 
 on:
   push:
-    branches: ["master"]
+    branches: ["main"]
   pull_request:
-    branches: ["master"]
+    branches: ["main"]
 
 jobs:
   assets:
