--- a/.github/workflows/zeitwerk.yml
+++ b/.github/workflows/zeitwerk.yml
@@ -2,9 +2,9 @@ name: Zeitwerk Check
 
 on:
   push:
-    branches: ["master"]
+    branches: ["main"]
   pull_request:
-    branches: ["master"]
+    branches: ["main"]
 
 jobs:
   zeitwerk:
