--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -2,9 +2,9 @@ name: RSpec Tests
 
 on:
   push:
-    branches: ["master"]
+    branches: ["main"]
   pull_request:
-    branches: ["master"]
+    branches: ["main"]
 
 # Add permissions to allow commenting on PRs
 permissions:
