--- a/config/storage.yml
+++ b/config/storage.yml
@@ -9,8 +9,8 @@ local:
 # Use Amazon S3 for production
 amazon:
   service: S3
-  access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-  secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
+  access_key_id: <%= ENV.fetch('S3_ACCESS_KEY_ID', '') %>
+  secret_access_key: <%= ENV.fetch('S3_SECRET_ACCESS_KEY', '') %>
   region: <%= ENV.fetch('AWS_REGION', 'us-east-1') %>
   bucket: <%= ENV.fetch('AWS_S3_BUCKET', 'snow-exchange-files') %>
 # Remember not to checkin your GCS keyfile to a repository
