--- a/.github/workflows/client-playwright-tests.yml
+++ b/.github/workflows/client-playwright-tests.yml
@@ -1,10 +1,14 @@
-name: Playwright E2E Tests
+name: Client Playwright E2E Tests
 
 on:
   push:
     branches: [main, master]
+    paths:
+      - "client/**"
   pull_request:
     branches: [main, master]
+    paths:
+      - "client/**"
   workflow_dispatch:
 
 jobs:
@@ -12,6 +16,10 @@ jobs:
     name: "Playwright E2E Tests"
     runs-on: ubuntu-latest
     timeout-minutes: 30
+    defaults:
+      run:
+        working-directory: ./client
+        
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -71,5 +79,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: playwright-report
-          path: playwright-report/
-          retention-days: 30
+          path: client/playwright-report/
+          retention-days: 30 
