update production cicd

--- a/.github/workflows/backend-rspec.yml
+++ b/.github/workflows/backend-rspec.yml
@@ -2,7 +2,7 @@ name: RSpec Tests
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "staging"]
   pull_request:
     branches: ["main"]
 
