--- a/.github/workflows/client-tests.yml
+++ b/.github/workflows/client-tests.yml
@@ -2,9 +2,9 @@ name: Client Tests
 
 on:
   push:
-    branches: [main, master]
+    branches: [main, staging]
   pull_request:
-    branches: [main, master]
+    branches: [main]
   workflow_dispatch:
   workflow_call:
 
