--- a/.github/workflows/client-playwright-tests.yml
+++ b/.github/workflows/client-playwright-tests.yml
@@ -2,11 +2,11 @@ name: Client Playwright E2E Tests
 
 on:
   push:
-    branches: [main, master]
+    branches: [main, staging]
     paths:
       - "client/**"
   pull_request:
-    branches: [main, master]
+    branches: [main]
     paths:
       - "client/**"
   workflow_dispatch:
@@ -19,7 +19,7 @@ jobs:
     defaults:
       run:
         working-directory: ./client
-        
+
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -80,4 +80,4 @@ jobs:
         with:
           name: playwright-report
           path: client/playwright-report/
-          retention-days: 30 
+          retention-days: 30
