--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -415,7 +415,7 @@ jobs:
           echo "- 💻 Next.js Frontend Application" >> $GITHUB_STEP_SUMMARY
           echo "**Environment:** Production (prod)" >> $GITHUB_STEP_SUMMARY
           echo "**AWS Region:** ${{ env.AWS_REGION }}" >> $GITHUB_STEP_SUMMARY
-          echo "**Public URL:** https://anvo.dev" >> $GITHUB_STEP_SUMMARY
+          echo "**Public URL:** https://snow.exchange" >> $GITHUB_STEP_SUMMARY
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
