--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -2,7 +2,7 @@ name: Security Scan
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "staging"]
   pull_request:
     branches: ["main"]
   workflow_call:
