--- a/client/package.json
+++ b/client/package.json
@@ -64,12 +64,15 @@
     "nuqs": "^2.4.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-qr-code": "^2.0.15",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "ua-parser-js": "^2.0.4",
+    "uuid": "^11.1.0",
     "vietqr": "^1.1.9",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
