--- a/.github/workflows/client-code-quality.yml
+++ b/.github/workflows/client-code-quality.yml
@@ -10,6 +10,7 @@ on:
     paths:
       - "client/**"
   workflow_dispatch:
+  workflow_call:
 
 jobs:
   code-quality:
@@ -44,4 +45,4 @@ jobs:
         run: pnpm lint
 
       - name: Format check
-        run: pnpm format:check 
+        run: pnpm format:check
