--- a/.github/workflows/backend-bundle-audit.yml
+++ b/.github/workflows/backend-bundle-audit.yml
@@ -2,7 +2,7 @@ name: Bundle Audit
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "staging"]
   pull_request:
     branches: ["main"]
 
