--- a/.github/workflows/client-code-quality.yml
+++ b/.github/workflows/client-code-quality.yml
@@ -2,14 +2,15 @@ name: Client Code Quality
 
 on:
   pull_request:
-    branches: [main, develop]
+    branches: [main]
     paths:
       - "client/**"
   push:
-    branches: [main, develop]
+    branches: [main, staging]
     paths:
       - "client/**"
   workflow_dispatch:
+  workflow_call:
 
 jobs:
   code-quality:
@@ -44,4 +45,4 @@ jobs:
         run: pnpm lint
 
       - name: Format check
-        run: pnpm format:check 
+        run: pnpm format:check
