--- a/.github/workflows/client-jest-tests.yml
+++ b/.github/workflows/client-jest-tests.yml
@@ -2,14 +2,15 @@ name: Client Jest Unit Tests
 
 on:
   push:
-    branches: [main, master]
+    branches: [main, staging]
     paths:
       - "client/**"
   pull_request:
-    branches: [main, master]
+    branches: [main]
     paths:
       - "client/**"
   workflow_dispatch:
+  workflow_call:
 
 # Add permissions configuration
 permissions:
@@ -25,7 +26,7 @@ jobs:
     defaults:
       run:
         working-directory: ./client
-        
+
     steps:
       - uses: actions/checkout@v4
 
@@ -104,4 +105,4 @@ jobs:
         with:
           lcov-file: ./client/coverage/lcov.info
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          title: "Test Coverage Report" 
+          title: "Test Coverage Report"
