--- a/.github/workflows/client-translations.yml
+++ b/.github/workflows/client-translations.yml
@@ -2,18 +2,19 @@ name: Client Translation Check
 
 on:
   pull_request:
-    branches: [main, develop]
+    branches: [main]
     paths:
       - "client/src/i18n/**"
       - "client/src/components/**"
       - "client/src/app/**"
   push:
-    branches: [main, develop]
+    branches: [main, staging]
     paths:
       - "client/src/i18n/**"
       - "client/src/components/**"
       - "client/src/app/**"
   workflow_dispatch:
+  workflow_call:
 
 jobs:
   check-translations:
@@ -65,4 +66,4 @@ jobs:
           if [ "$MISSING_KEYS" -ne "0" ]; then
             echo "::error::Translation check failed: $MISSING_KEYS keys are missing"
             exit 1
-          fi 
+          fi
