--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -2,9 +2,10 @@ name: Security Scan
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "staging"]
   pull_request:
     branches: ["main"]
+  workflow_call:
 
 jobs:
   security:
