--- a/.github/workflows/zeitwerk.yml
+++ b/.github/workflows/zeitwerk.yml
@@ -2,9 +2,10 @@ name: Zeitwerk Check
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "staging"]
   pull_request:
     branches: ["main"]
+  workflow_call:
 
 jobs:
   zeitwerk:
