--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,8 @@
 !/tmp/storage/
 !/tmp/storage/.keep
 
+/temp
+
 /public/assets
 
 # Ignore master key for decrypting credentials and more.
@@ -48,4 +50,6 @@
 
 /coverage/
 /coverage.data
+
+.cursorignore
 
